--- a/Android/MQTT Voice/src/main/res/layout/activity_main.xml
+++ b/Android/MQTT Voice/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:background="@mipmap/ic_launcher"
+    android:foregroundGravity="bottom"
     tools:context=".MainActivity">
 
     <TextView
@@ -204,5 +204,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTopic" />
+
+    <TextView
+        android:id="@+id/txtStatus2"
+        android:layout_width="281dp"
+        android:layout_height="125dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="8dp"
+        android:foreground="@drawable/elzershark"
+        android:foregroundGravity="center"
+        android:padding="4dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.412"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTopic"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
